WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49506
Repaint is broken when crossing writing mode roots
https://bugs.webkit.org/show_bug.cgi?id=49506
Summary
Repaint is broken when crossing writing mode roots
Dave Hyatt
Reported
2010-11-13 22:09:16 PST
Repaint is broken when crossing writing mode roots. Specifically when going from vertical-rl out into horizontal-tb.
Attachments
Patch
(42.16 KB, patch)
2010-11-13 22:11 PST
,
Dave Hyatt
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2010-11-13 22:11:59 PST
Created
attachment 73841
[details]
Patch
Dave Hyatt
Comment 2
2010-11-17 13:04:17 PST
Fixed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug