https://bugs.webkit.org/show_bug.cgi?id=49506

Reviewed by Anders Carlsson.

Repaint is broken across writing mode boundaries.  It's not enough to add in flipped offsets.  You have
to flip the rect itself.

WebCore:

Added fast/repaint/repaint-across-writing-mode-boundary.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computeRectForRepaint):

LayoutTests:

Added fast/repaint/repaint-across-writing-mode-boundary.html
* fast/repaint/repaint-across-writing-mode-boundary.html: Added.
* platform/mac/fast/repaint/repaint-across-writing-mode-boundary-expected.checksum: Added.
* platform/mac/fast/repaint/repaint-across-writing-mode-boundary-expected.png: Added.
* platform/mac/fast/repaint/repaint-across-writing-mode-boundary-expected.txt: Added.



Canonical link: https://commits.webkit.org/62451@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71980 268f45cc-cd09-0410-ab3c-d52691b4dbfc