WebCore/rendering/RenderBox.cpp
@@ -1379,11 +1379,10 @@ void RenderBox::computeRectForRepaint(RenderBoxModelObject* repaintContainer, In
     if (!o)
         return;
 
-    IntPoint topLeft = rect.location();
     if (isWritingModeRoot() && !isPositioned())
-        topLeft.move(locationOffsetIncludingFlipping());
-    else
-        topLeft.move(x(), y());
+        flipForWritingMode(rect);
+    IntPoint topLeft = rect.location();
+    topLeft.move(x(), y());
 
     EPosition position = style()->position();
 
@@ -1393,10 +1392,7 @@ void RenderBox::computeRectForRepaint(RenderBoxModelObject* repaintContainer, In
         fixed = position == FixedPosition;
         rect = layer()->transform()->mapRect(rect);
         topLeft = rect.location();
-        if (isWritingModeRoot() && !isPositioned())
-            topLeft.move(locationOffsetIncludingFlipping());
-        else
-            topLeft.move(x(), y());
+        topLeft.move(x(), y());
     } else if (position == FixedPosition)
         fixed = true;
 
